--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "orientation": "any",
   "scope": "/",
   "short_name": "IMIBIRD",
-  "start_url": "https://tabby247.github.io/Dhandli/flappy.html",
+  "start_url": "https://tabby247.github.io/Dhandli/",
   "theme_color": "#ffffff",
   "id": "IMIBIRD",
   "description": "THsi sis adecsoroton of athe absolseksy not",
