--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,24 @@
 {
-  "background_color": "#ffffff",
-  "dir": "ltr",
-  "display": "standalone",
   "name": "IMIBIRD",
-  "orientation": "any",
-  "scope": "/",
   "short_name": "IMIBIRD",
+  "description": "Flappy-style game with bird and pipes",
   "start_url": "flappy.html",
-  "theme_color": "#ffffff",
-  "id": "IMIBIRD",
-  "description": "THsi sis adecsoroton of athe absolseksy not",
-  "categories": [
-    "games"
-  ]
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#70c5ce",
+  "theme_color": "#70c5ce",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "categories": ["games"]
 }
